--- a/Tests/ConsoleProject/ConsoleProject.csproj
+++ b/Tests/ConsoleProject/ConsoleProject.csproj
@@ -3,6 +3,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <PropertyGroup>
