--- a/Tests/LibraryProject/LibraryProject.csproj
+++ b/Tests/LibraryProject/LibraryProject.csproj
@@ -6,5 +6,9 @@
         <LegalEmail>jarl.gullberg@gmail.com</LegalEmail>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
+
     <Import Project="../../Remora.Sdk/Sdk/Sdk.targets" />
 </Project>
