Fix version suffix.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Package
         if: matrix.platform == 'ubuntu-latest' && github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: dotnet pack -c Release --no-restore --no-build --version-suffix "+github$GITHUB_RUN_ID"
+        run: dotnet pack -c Release --no-restore --no-build --version-suffix "github$GITHUB_RUN_ID"
       - uses: actions/upload-artifact@v3
         if: matrix.platform == 'ubuntu-latest'
         with:
