--- a/Remora.Tests.Sdk/Remora.Tests.Sdk.csproj
+++ b/Remora.Tests.Sdk/Remora.Tests.Sdk.csproj
@@ -7,7 +7,8 @@
     <PropertyGroup>
         <Title>Remora.Tests.Sdk</Title>
         <Description>Provides default properties and targets for Remora-style unit test projects.</Description>
-        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionPrefix>1.0.1</VersionPrefix>
+        <PackageReleaseNotes>Update dependencies.</PackageReleaseNotes>
         <IsPackable>true</IsPackable>
         <PackageTags>MSBuild;MSBuildSdk;Remora;Tests;Unit Tests</PackageTags>
         <PackageType>MSBuildSdk</PackageType>
