--- a/Remora.Sdk/Remora.Sdk.csproj
+++ b/Remora.Sdk/Remora.Sdk.csproj
@@ -7,7 +7,11 @@
     <PropertyGroup>
         <Title>Remora.Sdk</Title>
         <Description>Provides default properties and targets for Remora-style projects.</Description>
-        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionPrefix>1.1.0</VersionPrefix>
+        <PackageReleaseNotes>
+            Add MIT file header.
+            Add support for SPDX file headers.
+        </PackageReleaseNotes>
         <IsPackable>true</IsPackable>
         <PackageTags>MSBuild;MSBuildSdk;Remora</PackageTags>
         <PackageType>MSBuildSdk</PackageType>
