--- a/Remora.Tests.Sdk/Sdk/Sdk.targets
+++ b/Remora.Tests.Sdk/Sdk/Sdk.targets
@@ -1,7 +1,4 @@
 <Project>
-    <Import Project="Sdk.targets" Sdk="Remora.Sdk" Version="1.1.1" Condition="'$(_RemoraInSourceBuild)' != 'true'"/>
-    <Import Project="../../Remora.Sdk/Sdk/Sdk.targets" Condition="'$(_RemoraInSourceBuild)' == 'true'"/>
-
     <!-- Override packability -->
     <PropertyGroup>
         <IsPackable>false</IsPackable>
@@ -26,4 +23,8 @@
     <ItemGroup>
         <PackageReference Include="xunit.analyzers" Version="1.0.0" PrivateAssets="all"/>
     </ItemGroup>
+
+    <!-- Import at last to respect set properties -->
+    <Import Project="Sdk.targets" Sdk="Remora.Sdk" Version="1.1.1" Condition="'$(_RemoraInSourceBuild)' != 'true'"/>
+    <Import Project="../../Remora.Sdk/Sdk/Sdk.targets" Condition="'$(_RemoraInSourceBuild)' == 'true'"/>
 </Project>
