--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -55,26 +55,33 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-    <!-- Analyzers -->
-    <ItemGroup>
-        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all" />
-    </ItemGroup>
+    <!-- Default packages -->
+    <Choose>
+        <When Condition="'$(ManagePackageVersionsCentrally)' == true">
+            <ItemGroup>
+                <PackageReference Include="StyleCop.Analyzers" PrivateAssets="all" />
+                <PackageReference Include="Nullable" PrivateAssets="all" />
+                <PackageReference Include="IsExternalInit" PrivateAssets="all" />
+                <PackageReference Include="JetBrains.Annotations" PrivateAssets="all" />
+            </ItemGroup>
 
-    <!-- Language support packages -->
-    <ItemGroup>
-        <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
-        <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
-    </ItemGroup>
+            <ItemGroup Condition="'$(IsPackable)' == 'true'">
+                <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+            </ItemGroup>
+        </When>
+        <Otherwise>
+            <ItemGroup>
+                <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all" />
+                <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
+                <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
+                <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="all" />
+            </ItemGroup>
 
-    <!-- JetBrains Annotations -->
-    <ItemGroup>
-        <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="all" />
-    </ItemGroup>
-
-    <!-- SourceLink -->
-    <ItemGroup Condition="'$(IsPackable)' == 'true'">
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
-    </ItemGroup>
+            <ItemGroup Condition="'$(IsPackable)' == 'true'">
+                <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+            </ItemGroup>
+        </Otherwise>
+    </Choose>
 
     <!-- NuGet Icon -->
     <PropertyGroup Condition="'$(IsPackable)' == 'true' And Exists('$(PackageIconPath)')">
@@ -123,7 +130,6 @@
     <PropertyGroup>
         <CodeAnalysisRuleSet>$(StylecopRuleset)</CodeAnalysisRuleSet>
     </PropertyGroup>
-
 
     <PropertyGroup Condition="'$(UseSPDXFileHeaders)' == 'true'">
         <LicenseTextFile>$(MSBuildThisFileDirectory)/license-headers/SPDX</LicenseTextFile>
