--- a/Remora.Tests.Sdk/Sdk/Sdk.props
+++ b/Remora.Tests.Sdk/Sdk/Sdk.props
@@ -1,4 +1,7 @@
 <Project>
+    <!-- Defaults for centrally managed package versions -->
+    <Import Project="Sdk.Packages.props" />
+
     <Import Project="Sdk.props" Sdk="Remora.Sdk" Version="2.0.1" Condition="'$(_RemoraInSourceBuild)' != 'true'"/>
     <Import Project="../../Remora.Sdk/Sdk/Sdk.props" Condition="'$(_RemoraInSourceBuild)' == 'true'"/>
 
