--- a/Tests/CentrallyManagedPackageVersionProject/Directory.Packages.props
+++ b/Tests/CentrallyManagedPackageVersionProject/Directory.Packages.props
@@ -6,7 +6,7 @@
 
     <ItemGroup>
         <!-- Override a default version -->
-        <PackageVersion Include="JetBrains.Annotations" Version="2022.1.0" />
+        <PackageVersion Update="JetBrains.Annotations" Version="2022.1.0" />
     </ItemGroup>
 
 </Project>
