--- a/Remora.Sdk/Sdk/Sdk.Packages.props
+++ b/Remora.Sdk/Sdk/Sdk.Packages.props
@@ -6,7 +6,8 @@
      -->
     <ItemGroup>
         <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.435" />
-        <PackageVersion Include="PolySharp" Version="1.13.1" />
+        <PackageVersion Include="Nullable" Version="1.3.1" />
+        <PackageVersion Include="IsExternalInit" Version="1.0.3" />
         <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
         <PackageVersion Include="JetBrains.Annotations" Version="2022.3.1" />
     </ItemGroup>
