--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -60,7 +60,8 @@
         <When Condition="'$(ManagePackageVersionsCentrally)' == true">
             <ItemGroup>
                 <PackageReference Include="StyleCop.Analyzers" PrivateAssets="all" />
-                <PackageReference Include="PolySharp" PrivateAssets="all" />
+                <PackageReference Include="Nullable" PrivateAssets="all" />
+                <PackageReference Include="IsExternalInit" PrivateAssets="all" />
                 <PackageReference Include="JetBrains.Annotations" PrivateAssets="all" />
             </ItemGroup>
 
@@ -71,7 +72,8 @@
         <Otherwise>
             <ItemGroup>
                 <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all" />
-                <PackageReference Include="PolySharp" Version="1.13.1" PrivateAssets="all" />
+                <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
+                <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
                 <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="all" />
             </ItemGroup>
 
