Normalize WarningsAsErrors and NoWarn properties.
Typically, these are passed on a command-line, and not all tools
support spaces or newlines in this context. Native AOT is one
such tool, and will simply fail to work if these characters are
present.

--- a/Remora.Sdk/Sdk/Sdk.targets
+++ b/Remora.Sdk/Sdk/Sdk.targets
@@ -108,6 +108,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <!-- Normalize problematic properties -->
+    <PropertyGroup>
+        <WarningsAsErrors>$(WarningsAsErrors.Replace("%0a", "").Replace("%0d", "").Replace(" ", ""))</WarningsAsErrors>
+        <NoWarn>$(NoWarn.Replace("%0a", "").Replace("%0d", "").Replace(" ", ""))</NoWarn>
+    </PropertyGroup>
+
     <!-- Default packages -->
     <Choose>
         <When Condition="'$(ManagePackageVersionsCentrally)' == true">
