--- a/Remora.Sdk/Sdk/Sdk.props
+++ b/Remora.Sdk/Sdk/Sdk.props
@@ -10,8 +10,8 @@
 
     <!-- Default targeting configuration -->
     <PropertyGroup>
-        <ExecutableFrameworks Condition="'$(ExecutableFrameworks)' == ''">net7.0</ExecutableFrameworks>
-        <LibraryFrameworks Condition="'$(LibraryFrameworks)' == ''">netstandard2.1;net6.0;$(ExecutableFrameworks)</LibraryFrameworks>
+        <ExecutableFrameworks Condition="'$(ExecutableFrameworks)' == ''">net8.0</ExecutableFrameworks>
+        <LibraryFrameworks Condition="'$(LibraryFrameworks)' == ''">netstandard2.1;net6.0;net7.0;$(ExecutableFrameworks)</LibraryFrameworks>
     </PropertyGroup>
 
     <!-- Default common properties -->
