--- a/Remora.Sdk/Sdk/Sdk.props
+++ b/Remora.Sdk/Sdk/Sdk.props
@@ -12,6 +12,7 @@
     <PropertyGroup>
         <ExecutableFrameworks Condition="'$(ExecutableFrameworks)' == ''">net8.0</ExecutableFrameworks>
         <LibraryFrameworks Condition="'$(LibraryFrameworks)' == ''">net6.0;net7.0;$(ExecutableFrameworks)</LibraryFrameworks>
+        <NetStandardFrameworks Condition="'$(NetStandardFrameworks)' == ''">netstandard2.1</NetStandardFrameworks>
         <TargetNetStandard Condition="'$(TargetNetStandard)' == ''">true</TargetNetStandard>
     </PropertyGroup>
 
