Remora.Tests.Sdk should not target NetStandard.

--- a/Remora.Tests.Sdk/Sdk/Sdk.props
+++ b/Remora.Tests.Sdk/Sdk/Sdk.props
@@ -8,6 +8,7 @@
     <!-- Override target frameworks -->
     <PropertyGroup>
         <LibraryFrameworks>$(ExecutableFrameworks)</LibraryFrameworks>
+        <TargetNetStandard>false</TargetNetStandard>
     </PropertyGroup>
 
     <!-- Default code coverage properties -->
